--- a/Codility/Codility.vcxproj.filters
+++ b/Codility/Codility.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClInclude Include="TapeEquilibrium.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="FrogRiverOne.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -51,6 +54,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="TapeEquilibrium.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="FrogRiverOne.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
