--- a/Codility/Codility.vcxproj
+++ b/Codility/Codility.vcxproj
@@ -79,6 +79,7 @@
   <ItemGroup>
     <ClInclude Include="FrogJmp.h" />
     <ClInclude Include="FrogRiverOne.h" />
+    <ClInclude Include="MaxCounters.h" />
     <ClInclude Include="PermCheck.h" />
     <ClInclude Include="PermMissingElem.h" />
     <ClInclude Include="stdafx.h" />
@@ -89,6 +90,7 @@
     <ClCompile Include="Codility.cpp" />
     <ClCompile Include="FrogJmp.cpp" />
     <ClCompile Include="FrogRiverOne.cpp" />
+    <ClCompile Include="MaxCounters.cpp" />
     <ClCompile Include="PermCheck.cpp" />
     <ClCompile Include="PermMissingElem.cpp" />
     <ClCompile Include="stdafx.cpp">
