--- a/Codility/Codility.vcxproj.filters
+++ b/Codility/Codility.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClInclude Include="FrogRiverOne.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="MaxCounters.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -57,6 +60,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="FrogRiverOne.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="MaxCounters.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
