--- a/Codility/Codility.vcxproj.filters
+++ b/Codility/Codility.vcxproj.filters
@@ -39,6 +39,12 @@
     <ClInclude Include="MaxCounters.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="PassingCars.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="GenomicRangeQuery.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -63,6 +69,12 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="MaxCounters.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="PassingCars.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="GenomicRangeQuery.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
