--- a/Codility/Codility.vcxproj.filters
+++ b/Codility/Codility.vcxproj.filters
@@ -45,6 +45,9 @@
     <ClInclude Include="GenomicRangeQuery.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="MinAvgTwoSlice.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -75,6 +78,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="GenomicRangeQuery.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="MinAvgTwoSlice.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
