--- a/Codility/Codility.vcxproj.filters
+++ b/Codility/Codility.vcxproj.filters
@@ -48,6 +48,9 @@
     <ClInclude Include="MinAvgTwoSlice.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="CountDiv.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -81,6 +84,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="MinAvgTwoSlice.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="CountDiv.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
