--- a/Codility/Codility.vcxproj.filters
+++ b/Codility/Codility.vcxproj.filters
@@ -51,6 +51,9 @@
     <ClInclude Include="CountDiv.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Distinct.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -87,6 +90,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="CountDiv.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Distinct.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
