--- a/Codility/Codility.vcxproj.filters
+++ b/Codility/Codility.vcxproj.filters
@@ -54,6 +54,9 @@
     <ClInclude Include="Distinct.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="MaxProductOfThree.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -93,6 +96,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Distinct.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="MaxProductOfThree.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
